--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,103 +1,90 @@
-@import 'media-queries';
+@import "media-queries";
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Titillium Web', sans-serif;
+    font-family: "Titillium Web", sans-serif;
     text-decoration: none;
 }
 
-.signFont{
-    font-family: 'Caveat', cursive;
+.signFont {
+    font-family: "Caveat", cursive;
     font-style: italic;
     font-weight: 400;
 }
 
-.flex{
+.flex {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-body{
+body {
     background-image: url(../img/bgimage.jpg);
     background-position: center;
     background-size: cover;
-    
 }
 
-header{
+header {
     height: 15vh;
     flex: wrap;
 
-    img{
+    img {
         width: 7rem;
         height: 7rem;
         cursor: pointer;
+        position: relative;
+        top: 1rem;
+        left: 0.2;
 
-        @include tablet{
-            width: 9rem;
-            height: 9rem;
-            position: relative;
-            left: 1rem;
-
-        }
-        @include mobile{
+        @include mobile {
             width: 7rem;
             height: 7rem;
             position: relative;
             left: 1rem;
-
         }
     }
 
-    h4{
-        color: #fff;
-        font-weight: 600;
+    h4 {
         font-size: 1.5rem;
         position: relative;
-        top: 1.5rem;
-        right: 2rem;
-        @include mobile{
-            font-size: 1rem;
-            position: relative;
-            top: -0.5rem;
-        }
-        @include tablet{
-            font-size: 1.5rem;
-            position: relative;
-            top: -0.5rem;
+        color: aliceblue;
+        top: 1rem;
+        right: 30rem;
+        @include mobile {
+            font-size: 1.2rem;
+            position: absolute;
+            color: aliceblue;
+            top: 4.5rem;
             right: 8rem;
         }
     }
-    a{
+    a {
         color: red;
     }
-
 }
 
-.container{
+.container {
     height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 
-    h1{
+    h1 {
         font-size: 3rem;
         color: aliceblue;
+        position: absolute;
+        left: 16rem;
+        top: 14rem;
 
-        @include mobile{
+        @include mobile {
+            font-size: 2.7rem;
             position: absolute;
-            left: 2rem;
-            top: 20rem;
+            color: aliceblue;
+            left: 3rem;
+            top: 22rem;
         }
-        @include tablet{
-            font-size: 4rem;
-            position: absolute;
-            left: 2rem;
-            top: 25rem;
-        }
-
-    }    
+    }
 }
